[package]
name = "hls-stream-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
thiserror = "1.0"
