[package]
name = "rusty-hls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hls-rs = { path = "../hls-rs" }
hls-stream-reader = { path = "../hls-stream-reader" }
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }